Hells paradise: 1311600.jpg

--- a/conky_min.conf
+++ b/conky_min.conf
@@ -21,11 +21,7 @@ conky.config = {
 	override_utf8_locale = true,
 
 	default_color = '#d5d5d5',
-	color0 = '#F45060',
-	color1 = '#75667b',
-	color2 = '#8d1a22',
-	color3 = '#b76a57',
-	color4 = '#826675',
+	color1 = '#ffffff',
 
 --############################
 -- - Window specifications - #
@@ -37,8 +33,8 @@ conky.config = {
 	own_window_type = 'desktop',
 	own_window_argb_visual = true,
 	own_window_argb_value = 180,
-	own_window_transparent = false,
-	own_window_colour = '0f0d1a',
+	own_window_transparent = true,
+	own_window_colour = '000000',
 	own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
 
 	border_inner_margin = 35,
@@ -47,7 +43,7 @@ conky.config = {
 	alignment = 'top_right',
 	gap_x = 35,
 	gap_y = 35,
-	minimum_width = 250, minimum_height = 1080,
+	minimum_width = 360, minimum_height = 1080,
 	maximum_width = 520, maximum_height = 1080,
 
 	draw_shades = true,
@@ -55,49 +51,25 @@ conky.config = {
 };
 
 conky.text = [[
-${color0}${voffset -5}${font Iosevka Term:style=Regular:size=16}${time %B %d %Y}${font}${color}
+${voffset -5}${font Iosevka Term:style=Regular:size=16}${time %B %d %Y}
 ${font Iosevka Term:style=Regular:size=16}${time %A}${font}
 ${font Iosevka Term:style=Regular:size=30}${time %I:%M %p}${font}
 
 Kernel:${alignr}${kernel}
-Uptime:${alignr}${color0}$uptime${color}
+Uptime:${alignr}$uptime
 
 ${font Iosevka Term:style=Regular:BOLD:}CPU temp:${alignr}${acpitemp}°C${font}
 
-CPU 1${alignr}${cpu cpu1}%
-${color4}${cpugraph cpu1 0c0505 83524e -t}${color}
-CPU 2${alignr}${cpu cpu2}%
-${color4}${cpugraph cpu2 0c0505 83524e -t}${color}
-CPU 3${alignr}${cpu cpu3}%
-${color4}${cpugraph cpu3 0c0505 83524e -t}${color}
-CPU 4${alignr}${cpu cpu4}%
-${color1}${cpugraph cpu4 0f0d1a 826675 -t}${color}
-CPU 5${alignr}${cpu cpu5}%
-${color1}${cpugraph cpu5 0f0d1a 826675 -t}${color}
-CPU 6${alignr}${cpu cpu6}%
-${color1}${cpugraph cpu6 0f0d1a 826675 -t}${color}
-
-${font Iosevka Term:style=Regular:BOLD:}RAM : ${alignr}${color4}${mem}${color}${font} ${memperc}%
-${top_mem name 1}${alignr}${top_mem mem 1}%
-${top_mem name 2}${alignr}${top_mem mem 2}%
-${top_mem name 3}${alignr}${top_mem mem 3}%
-${top_mem name 4}${alignr}${top_mem mem 4}%
-${top_mem name 5}${alignr}${top_mem mem 5}%
+${font Iosevka Term:style=Regular:BOLD:}RAM : ${alignr}${mem}${font} ${memperc}%
 
 ${font Iosevka Term:style=Regular:BOLD:}Top processes${font}
-${color1}${voffset -10}${hr}${color}
-${top name 1}${alignr}${top cpu 1}%
-${top name 2}${alignr}${top cpu 2}%
-${top name 3}${alignr}${top cpu 3}%
-${top name 4}${alignr}${top cpu 4}%
-${top name 5}${alignr}${top cpu 5}%
 
 ${font Iosevka Term:style=Regular:BOLD:}Filesystem : ${alignr}${fs_used /} / ${fs_size /}(${fs_used_perc}%)${font}
-${color1}$fs_bar${color}
+$fs_bar
 
 ${font Iosevka Term:style=Regular:BOLD:}LAN : enxa0cec8963d1f${font}
-Download:  ${downspeed enxa0cec8963d1f}${alignr}Total: ${color0}${totaldown enxa0cec8963d1f}${color}
-Upload:  ${upspeed enxa0cec8963d1f}${alignr}Total: ${color4}${totalup enxa0cec8963d1f}${color}
+Download:  ${downspeed enxa0cec8963d1f}${alignr}Total: ${totaldown enxa0cec8963d1f}
+Upload:  ${upspeed enxa0cec8963d1f}${alignr}Total: ${totalup enxa0cec8963d1f}
 
 ${font Iosevka Term:style=Regular:BOLD:}Wifi : wlo1${font}
 Download:  ${downspeed wlo1}${alignr}Total: ${totaldown wlo1}
