Black Blue Cyan theme

--- a/conky.conf
+++ b/conky.conf
@@ -10,7 +10,6 @@ conky.config = {
 	cpu_avg_samples = 2,
 
 	double_buffer = true,
-	no_buffers = true,
 
 --####################
 -- - Text settings - #
@@ -20,12 +19,13 @@ conky.config = {
 	font = 'Iosevka Term:style=Regular:size=10',
 	override_utf8_locale = true,
 
-	default_color = '#d5d5d5',
-	color0 = '#F45060',
-	color1 = '#75667b',
-	color2 = '#8d1a22',
+	default_color = '#c5c5c5',
+	color0 = '#01ffc1',
+	color1 = '#4e8384',
+	color2 = '#fdf3ef',
 	color3 = '#b76a57',
-	color4 = '#826675',
+	color4 = '#596973',
+	window_color = '#10212b',
 
 --############################
 -- - Window specifications - #
@@ -38,18 +38,20 @@ conky.config = {
 	own_window_argb_visual = true,
 	own_window_argb_value = 180,
 	own_window_transparent = false,
-	own_window_colour = '0f0d1a',
+	own_window_colour = window_color,
 	own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
 
-	border_inner_margin = 35,
+	border_inner_margin = 10,
+	draw_outline = true,
+	default_outline_color = color0,
+	border_width = 2,
 	border_outer_margin = 0,
 
-	alignment = 'top_right',
+	alignment = 'top_left',
 	gap_x = 35,
-	gap_y = 35,
-	minimum_width = 250, minimum_height = 1080,
-	maximum_width = 520, maximum_height = 1080,
-
+	gap_y = 50,
+	minimum_width = 250, minimum_height = 1050,
+	maximum_width = 520, maximum_height = 1050,
 	draw_shades = true,
 
 };
@@ -57,27 +59,27 @@ conky.config = {
 conky.text = [[
 ${color0}${voffset -5}${font Iosevka Term:style=Regular:size=16}${time %B %d %Y}${font}${color}
 ${font Iosevka Term:style=Regular:size=16}${time %A}${font}
-${font Iosevka Term:style=Regular:size=30}${time %I:%M %p}${font}
+${color2}${font Iosevka Term:style=Regular:size=30}${time %I:%M %p}${font}${color}
 
-Kernel:${alignr}${kernel}
+Kernel:${alignr}${color2}${kernel}${color}
 Uptime:${alignr}${color0}$uptime${color}
 
 ${font Iosevka Term:style=Regular:BOLD:}CPU temp:${alignr}${acpitemp}°C${font}
 
 CPU 1${alignr}${cpu cpu1}%
-${color4}${cpugraph cpu1 0c0505 83524e -t}${color}
+${color4}${cpugraph cpu1 1c2f38 e7ddd9 -t}${color}
 CPU 2${alignr}${cpu cpu2}%
-${color4}${cpugraph cpu2 0c0505 83524e -t}${color}
+${color4}${cpugraph cpu2 1c2f38  e7ddd9 -t}${color}
 CPU 3${alignr}${cpu cpu3}%
-${color4}${cpugraph cpu3 0c0505 83524e -t}${color}
+${color4}${cpugraph cpu3 1c2f38 e7ddd9 -t}${color}
 CPU 4${alignr}${cpu cpu4}%
-${color1}${cpugraph cpu4 0f0d1a 826675 -t}${color}
+${color4}${cpugraph cpu4 1c2f38 e7ddd9 -t}${color}
 CPU 5${alignr}${cpu cpu5}%
-${color1}${cpugraph cpu5 0f0d1a 826675 -t}${color}
+${color4}${cpugraph cpu5 1c2f38 e7ddd9 -t}${color}
 CPU 6${alignr}${cpu cpu6}%
-${color1}${cpugraph cpu6 0f0d1a 826675 -t}${color}
+${color4}${cpugraph cpu6 1c2f38 e7ddd9 -t}${color}
 
-${font Iosevka Term:style=Regular:BOLD:}RAM : ${alignr}${color4}${mem}${color}${font} ${memperc}%
+${font Iosevka Term:style=Regular:BOLD:}RAM : ${alignr}${color0}${mem}${color}${font} ${memperc}%
 ${top_mem name 1}${alignr}${top_mem mem 1}%
 ${top_mem name 2}${alignr}${top_mem mem 2}%
 ${top_mem name 3}${alignr}${top_mem mem 3}%
@@ -85,7 +87,7 @@ ${top_mem name 4}${alignr}${top_mem mem 4}%
 ${top_mem name 5}${alignr}${top_mem mem 5}%
 
 ${font Iosevka Term:style=Regular:BOLD:}Top processes${font}
-${color1}${voffset -10}${hr}${color}
+${color4}${voffset -10}${hr}${color}
 ${top name 1}${alignr}${top cpu 1}%
 ${top name 2}${alignr}${top cpu 2}%
 ${top name 3}${alignr}${top cpu 3}%
@@ -96,8 +98,8 @@ ${font Iosevka Term:style=Regular:BOLD:}Filesystem : ${alignr}${fs_used /} / ${f
 ${color1}$fs_bar${color}
 
 ${font Iosevka Term:style=Regular:BOLD:}LAN : enxa0cec8963d1f${font}
-Download:  ${downspeed enxa0cec8963d1f}${alignr}Total: ${color0}${totaldown enxa0cec8963d1f}${color}
-Upload:  ${upspeed enxa0cec8963d1f}${alignr}Total: ${color4}${totalup enxa0cec8963d1f}${color}
+Download:  ${color0}${downspeed enxa0cec8963d1f}${color}${alignr}Total: ${color0}${totaldown enxa0cec8963d1f}${color}
+${color4}Upload:  ${upspeed enxa0cec8963d1f}${alignr}Total: ${totalup enxa0cec8963d1f}${color}
 
 ${font Iosevka Term:style=Regular:BOLD:}Wifi : wlo1${font}
 Download:  ${downspeed wlo1}${alignr}Total: ${totaldown wlo1}
